--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <div class="left-side">
         <div class="profile-text">
           <div class="pfp-box">
-            <img id="pfp" src="professional_photo.png" alt="profile picture" />
+            <img
+              id="pfp"
+              src="/img/professional_photo.png"
+              alt="profile picture"
+            />
           </div>
           <h2>SHIVANSH KUSH<br /><span>CS STUDENT</span></h2>
         </div>
