added resume pdf, fixed img name

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
       <div class="left-side">
         <div class="profile-text">
           <div class="pfp-box">
-            <img
-              id="pfp"
-              src="/img/professional_photo.png"
-              alt="profile picture"
-            />
+            <img id="pfp" src="/data/pfp.png" alt="profile picture" />
           </div>
           <h2>SHIVANSH KUSH<br /><span>CS STUDENT</span></h2>
         </div>
@@ -128,6 +124,10 @@
       </div>
 
       <div class="right-side"></div>
+
+      <div class="button">
+        <a href="" download="resume"></a>
+      </div>
     </div>
   </body>
 </html>
