added download button, fixed contact links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="contact-info">
           <h3 class="title">Contact Info</h3>
-          <ul>
+          <ul id="contacts">
             <li>
               <span class="icon"
                 ><i class="fa fa-phone" aria-hidden="true"></i>
@@ -35,25 +35,37 @@
               <span class="icon"
                 ><i class="fa fa-envelope-o" aria-hidden="true"></i>
               </span>
-              <span class="title">kushivansh27@gmail.com</span>
+              <span class="title"
+                ><a href="mailto:kushivansh27@gmail.com" class="contact-links"
+                  >kushivansh27@gmail.com</a
+                >
+              </span>
             </li>
             <li>
               <span class="icon"
                 ><i class="fa fa-github" aria-hidden="true"></i>
               </span>
-              <span class="title">www.github.com/aka-kush</span>
+              <span class="title"
+                ><a class="contact-links" href="https://github.com/aka-Kush"
+                  >www.github.com/aka-kush</a
+                ></span
+              >
             </li>
             <li>
               <span class="icon"
                 ><i class="fa fa-link" aria-hidden="true"></i
               ></span>
-              <span class="title">www.aka-kush.github.io</span>
+              <span class="title"
+                ><a class="contact-links" href="https://aka-kush.github.io"
+                  >www.aka-kush.github.io</a
+                ></span
+              >
             </li>
             <li>
               <span class="icon"
                 ><i class="fa fa-map-marker" aria-hidden="true"></i>
               </span>
-              <span class="title">Saharanpur, Uttar Pradesh</span>
+              <span class="title">Chandigarh</span>
             </li>
           </ul>
         </div>
@@ -110,7 +122,7 @@
             <li>
               <span class="text">English</span>
               <span class="percent">
-                <div style="width: 92%"></div>
+                <div style="width: 100%"></div>
               </span>
             </li>
             <li>
@@ -126,7 +138,12 @@
       <div class="right-side"></div>
 
       <div class="button">
-        <a href="" download="resume"></a>
+        <a
+          href="https://drive.google.com/uc?export=download&id=18zfetdjlz0f2f_aU_hr0m_4EtRVtx5LO"
+          download="resume"
+        >
+          <button id="download-btn">Download</button>
+        </a>
       </div>
     </div>
   </body>
