removed pfp file, added link to pfp

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <div class="left-side">
         <div class="profile-text">
           <div class="pfp-box">
-            <img id="pfp" src="/data/pfp.png" alt="profile picture" />
+            <img
+              id="pfp"
+              src="https://previews.dropbox.com/p/thumb/ACAhVskPmEp0AnVnIVvOp5ubAlQZXP0UkTxsi-i7m78QrT-feCVRZZGaR8GNVQfyTNNAcdNJgAwalnW9lPkdnVsiz25SvNG-yVZe8PObDOj8izW9YrdYJ2YTNEUMu5QMcjSL6QYCkRqxiri88SlD-VWftxhtadzozxJ__wPRLnUeJeRGpjEg9IR_pmzTlwSvnvCee1iKVETEdtkrvS4brfsqf9K9Ux_vQX-_8wAFEOqfG4AuErJ6NkRNakk3uGDybKxmjuK6vjsSCCetOx9Z7MJWh1hUeQ3qRDktNW6rF9Nu_eadi-d4MhK88EjwtGzb4paZPXf4W-3RbM_H8wINrp9zhWuoqQAbkmyfup_p927A9xenVC0cnd0-bQWYH-kPEU-1ITkojfLzqNZ2JiqKfPeq/p.png"
+              alt="profile picture"
+            />
           </div>
           <h2>SHIVANSH KUSH<br /><span>CS STUDENT</span></h2>
         </div>
