--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
           <div class="pfp-box">
             <img
               id="pfp"
-              src="https://previews.dropbox.com/p/thumb/ACAhVskPmEp0AnVnIVvOp5ubAlQZXP0UkTxsi-i7m78QrT-feCVRZZGaR8GNVQfyTNNAcdNJgAwalnW9lPkdnVsiz25SvNG-yVZe8PObDOj8izW9YrdYJ2YTNEUMu5QMcjSL6QYCkRqxiri88SlD-VWftxhtadzozxJ__wPRLnUeJeRGpjEg9IR_pmzTlwSvnvCee1iKVETEdtkrvS4brfsqf9K9Ux_vQX-_8wAFEOqfG4AuErJ6NkRNakk3uGDybKxmjuK6vjsSCCetOx9Z7MJWh1hUeQ3qRDktNW6rF9Nu_eadi-d4MhK88EjwtGzb4paZPXf4W-3RbM_H8wINrp9zhWuoqQAbkmyfup_p927A9xenVC0cnd0-bQWYH-kPEU-1ITkojfLzqNZ2JiqKfPeq/p.png"
+              src="/data/pfp.png"
               alt="profile picture"
             />
+            <!-- src="https://previews.dropbox.com/p/thumb/ACAhVskPmEp0AnVnIVvOp5ubAlQZXP0UkTxsi-i7m78QrT-feCVRZZGaR8GNVQfyTNNAcdNJgAwalnW9lPkdnVsiz25SvNG-yVZe8PObDOj8izW9YrdYJ2YTNEUMu5QMcjSL6QYCkRqxiri88SlD-VWftxhtadzozxJ__wPRLnUeJeRGpjEg9IR_pmzTlwSvnvCee1iKVETEdtkrvS4brfsqf9K9Ux_vQX-_8wAFEOqfG4AuErJ6NkRNakk3uGDybKxmjuK6vjsSCCetOx9Z7MJWh1hUeQ3qRDktNW6rF9Nu_eadi-d4MhK88EjwtGzb4paZPXf4W-3RbM_H8wINrp9zhWuoqQAbkmyfup_p927A9xenVC0cnd0-bQWYH-kPEU-1ITkojfLzqNZ2JiqKfPeq/p.png" -->
           </div>
           <h2>SHIVANSH KUSH<br /><span>CS STUDENT</span></h2>
         </div>
@@ -92,10 +93,50 @@
 
         <div class="contact-info skills">
           <h3 class="title">Skills</h3>
-          <ul class="try">
-            <li class="try-li">
-              <span class="title">html</span>
-            </li>
+          <div class="box">
+          <h4>html</h4>
+          <div class="percent">
+            <div style="width: 100%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>css</h4>
+          <div class="percent">
+            <div style="width: 100%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>js</h4>
+          <div class="percent">
+            <div style="width: 90%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>react.js</h4>
+          <div class="percent">
+            <div style="width: 85%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>mysql</h4>
+          <div class="percent">
+            <div style="width: 70%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>php</h4>
+          <div class="percent">
+            <div style="width: 60%;"></div>
+          </div>
+        </div>
+        <div class="box">
+          <h4>jquery</h4>
+          <div class="percent">
+            <div style="width: 80%;"></div>
+          </div>
+        </div>
+
+            <!-- <ul class="try">
             <li class="try-li">
               <span class="title">css</span>
             </li>
@@ -117,10 +158,10 @@
             <li class="try-li">
               <span class="title">PHP</span>
             </li>
-          </ul>
+          </ul> -->
         </div>
 
-        <div class="contact-info language">
+        <!-- <div class="contact-info language">
           <h3 class="title">Languages</h3>
           <ul>
             <li>
@@ -136,19 +177,92 @@
               </span>
             </li>
           </ul>
+        </div> -->
+      </div>
+
+      <div class="right-side">
+        <div class="about">
+          <h2 class="title2">Profile</h2>
+          <p>
+            Enthusiastic Computer Science student with a thirst for knowledge.
+            Passion for critical thinking/problem-solving and sharing a love for
+            technology and science. Eager to continue exploring the inspiring,
+            creative field of Web Development. Looking for a role as an intern
+            using my experience with building web apps.
+          </p>
         </div>
-      </div>
+        <div class="about">
+          <h2 class="title2">Experience</h2>
+          <div class="box">
+            <div class="year-company">
+              <h5>2022</h5>
+              <h5>The Links Guy</h5>
+            </div>
+            <div class="text">
+              <h4>Link Prospector</h4>
+              <ul>
+                <li>Collecting and editing data through extensive web research,
+                  using of google sheets</li>
+                  <li>Analyzing multiple information sources to resolve factual
+                    discrepancies in data.</li>
+                    <li>Engaging in online discussion with colleagues on best practices
+                      for getting positive results.</li>
+                      <li>Ensuring quality of data in the database</li>
+              </ul>
+            </div>
 
-      <div class="right-side"></div>
+          </div>
+          <div class="box">
+            <div class="year-company">
+              <h5>2019 - 2020</h5>
+              <h5>CodeAcademy</h5>
+            </div>
+            <div class="text">
+              <h4>Coding Chapter Lead</h4>
+              <ul>
+                <li>
+                  Organizing meets for Coding enthusiasts
+                </li>
+                <li>
+                  Discussing Projects and Developing together
+                </li>
+                <li>
+                  Collaboratively working on day-to-day tech oriented task
+                </li>
+              </ul>   
+            </div>
 
-      <div class="button">
-        <a
-          href="https://drive.google.com/uc?export=download&id=18zfetdjlz0f2f_aU_hr0m_4EtRVtx5LO"
-          download="resume"
-        >
-          <button id="download-btn">Download</button>
-        </a>
-      </div>
+          </div>
+
+          <div class="about cert">
+            <h2 class="title2">Certifications</h2>
+            <div class="text">
+              <h5>Udemy - 2021</h5>
+              <p>Front End Web Development Ultimate Course</p>
+            </div>
+            <div class="text">
+              <h5>University of California, Irvine - 2020</h5>
+              <p>Interfacing with the Arduino</p>
+            </div>
+            <div class="text">
+              <h5>University of California, Irvine - 2020</h5>
+              <p>Introduction to the Internet of Things and Embedded Systems</p>
+            </div>
+            <div class="text">
+              <h5>University of California, Irvine - 2020</h5>
+              <p>The Arduino Platform and C Programming</p>
+            </div>
+          </div>
+        </div>
+
+        
+    </div><div class="button">
+      <a
+        href="https://drive.google.com/uc?export=download&id=18zfetdjlz0f2f_aU_hr0m_4EtRVtx5LO"
+        download="resume"
+      >
+        <button id="download-btn">Download</button>
+      </a>
     </div>
   </body>
 </html>
