removed redundant code ; added projects section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
               src="/data/pfp.png"
               alt="profile picture"
             />
-            <!-- src="https://previews.dropbox.com/p/thumb/ACAhVskPmEp0AnVnIVvOp5ubAlQZXP0UkTxsi-i7m78QrT-feCVRZZGaR8GNVQfyTNNAcdNJgAwalnW9lPkdnVsiz25SvNG-yVZe8PObDOj8izW9YrdYJ2YTNEUMu5QMcjSL6QYCkRqxiri88SlD-VWftxhtadzozxJ__wPRLnUeJeRGpjEg9IR_pmzTlwSvnvCee1iKVETEdtkrvS4brfsqf9K9Ux_vQX-_8wAFEOqfG4AuErJ6NkRNakk3uGDybKxmjuK6vjsSCCetOx9Z7MJWh1hUeQ3qRDktNW6rF9Nu_eadi-d4MhK88EjwtGzb4paZPXf4W-3RbM_H8wINrp9zhWuoqQAbkmyfup_p927A9xenVC0cnd0-bQWYH-kPEU-1ITkojfLzqNZ2JiqKfPeq/p.png" -->
           </div>
           <h2>SHIVANSH KUSH<br /><span>CS STUDENT</span></h2>
         </div>
@@ -135,49 +134,7 @@
             <div style="width: 80%;"></div>
           </div>
         </div>
-
-            <!-- <ul class="try">
-            <li class="try-li">
-              <span class="title">css</span>
-            </li>
-            <li class="try-li">
-              <span class="title">js</span>
-            </li>
-            <li class="try-li">
-              <span class="title">iot</span>
-            </li>
-            <li class="try-li">
-              <span class="title">sql</span>
-            </li>
-            <li class="try-li">
-              <span class="title">c/c++</span>
-            </li>
-            <li class="try-li">
-              <span class="title">react js</span>
-            </li>
-            <li class="try-li">
-              <span class="title">PHP</span>
-            </li>
-          </ul> -->
         </div>
-
-        <!-- <div class="contact-info language">
-          <h3 class="title">Languages</h3>
-          <ul>
-            <li>
-              <span class="text">English</span>
-              <span class="percent">
-                <div style="width: 100%"></div>
-              </span>
-            </li>
-            <li>
-              <span class="text">Hindi</span>
-              <span class="percent">
-                <div style="width: 100%"></div>
-              </span>
-            </li>
-          </ul>
-        </div> -->
       </div>
 
       <div class="right-side">
@@ -253,6 +210,14 @@
               <p>The Arduino Platform and C Programming</p>
             </div>
           </div>
+
+
+          <div class="projects">
+            <h2 class="title2">Projects</h2>
+            <div class="text">
+              <a href="https://kush-projects.netlify.app/assets/projects" target="_blank" class="project-link">Link to my projects portfolio</a>
+          </div>
+
         </div>
 
         
